src/App.css
.App {
  text-align: center;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}
.site-logo{
  width: 50px;
  height: 50px;
}
.vp-height {
  height: 80vh;
}
.modal-alert {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  z-index: 10;
  background: rgb(21 21 21 / 87%);
}
.dp{
  width: 120px;
  height: 120px;
  overflow: hidden;
  margin: 15px auto;
  border-radius: 50%;
  background: #ccc;
}
.dp img {
  width: auto;
  height: 120px;
}
.divht {
  height: 400px;
}
.sm-font{font-size:12px;}

